Set options for helping the development process

--- a/.devcontainer/odoo.conf
+++ b/.devcontainer/odoo.conf
@@ -18,7 +18,7 @@ data_dir = /var/lib/odoo
 ; log_db = False
 ; log_handler = [':INFO']
 ; log_level = info
-; logfile = None
+logfile = /var/log/odoo/odoo-server.log
 ; longpolling_port = 8072
 ; max_cron_threads = 2
 ; osv_memory_age_limit = 1.0
